# NanoRange-v2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py  run.py
api/routes/: __init__.py  chat.py  files.py  pipeline.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/components/: ChatMessage.tsx  GalleryView.tsx  ImageUpload.tsx  NanoIcon.tsx  Sidebar.tsx  api.ts  index.ts  types.ts
frontend/src/app/components/landing/: AgentPipeline.tsx  DemoShowcase.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  ParticleBackground.tsx  Toolbox.tsx  WhatsNext.tsx  index.ts
frontend/src/app/components/pipeline/: NodePort.tsx  ParameterPanel.tsx  PipelineCanvas.tsx  PipelineContext.tsx  PipelineEditor.tsx  index.ts  (+5 more)
frontend/src/app/hooks/: useSavedPipelines.ts  useTools.ts
frontend/src/app/services/: pipelineService.ts  types.ts
nanorange/: __init__.py  agent.py  main.py  settings.py
nanorange/agent/: __init__.py  agents.py  meta_tools.py  orchestrator.py  planner_tools.py  prompts.py
nanorange/agent/prompts/: __init__.py  coordinator_prompts.py  executor_prompts.py  planner_prompts.py
nanorange/agent/refinement/: __init__.py  adaptive_executor.py  artifact_manager.py  image_reviewer.py  parameter_optimizer.py  refinement_tracker.py
nanorange/cli/: __init__.py  commands.py
nanorange/core/: __init__.py  executor.py  pipeline.py  refinement_schemas.py  registry.py  schemas.py  validator.py
nanorange/storage/: __init__.py  database.py  file_store.py  session_manager.py
nanorange/tools/: __init__.py  base.py  decorators.py
nanorange/tools/builtin/: __init__.py  io_tools.py  measurement.py  preprocessing.py  segmentation.py
nanorange/tools/builtin/ml_tools/: __init__.py  cellpose_segmentation.py
nanorange/tools/builtin/vlm_tools/: __init__.py  base_image_agent.py  boundary_colorizer.py  image_enhancer.py
nanorange/utils/: __init__.py  file_urls.py  image_utils.py
tests/: __init__.py  test_core.py
(+3 files in other folders)
